--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         <div class="topnav">
             <div class="container">
                 <a href="#contact">Contact</a>
-                <a href="./subpage/aboutme.html">About Me</a>
+                <a href="#experience">Experience</a>
                 <a href="#project">Project</a>
                 <a href="#publication">Publication</a>
                 <!-- <a href="#news">News</a> -->
-                <a href="index.html">Home</a>
+                <!-- <a href="index.html">Home</a> -->
             </div>
         </div>
 
@@ -294,6 +294,87 @@
                                     <a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
                                     <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- List of education -->
+                    <div id="experience" class="vspace-top">
+                        <h1>Education</h1>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/uoe_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>MSc (with Distinction) in Informatics</b>, 2019
+                                <br />
+                                The University of Edinburgh
+                                <br />
+                                Dissertation: Gender Identification from 3D Facial Surface Model <a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
+                                <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
+                                <br />
+                                Supervisor:
+                                <a href="https://homepages.inf.ed.ac.uk/rbf/">Robert B. Fisher</a>
+                                <br />
+                                <a href="../docs/transcript/Transcript_MSc_UoE_Hao_Wang.pdf">Full HEAR Transcript</a>
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>B.Eng. in Telecommunication Engineering</b>, 2018
+                                <br />
+                                Beijing University of Posts and Telecommunications
+                                <br />
+                                Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel <a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
+                                <br />
+                                Supervisor:
+                                <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
+                                <br />
+                                <a href="../docs/transcript/Transcript_BE_BUPT_Hao_Wang.pdf">Full Transcript</a>
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/his_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>Exchange student</b>, Sept. 2016 - Jan. 2017
+                                <br />
+                                University of Skövde
+                                <br />
+                                <a href="../docs/transcript/Certificate_Exchange_Hao_Wang.pdf">Course certificate</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- List of research activities -->
+                    <div class="vspace-top">
+                        <h1>Research Experience</h1>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/casia_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>Research Intern</b>, Oct. 2019 - present
+                                <br />
+                                Center for Biometrics and Security Research (CBSR) & National Laboratory of Pattern Recognition (NLPR)
+                                <br />
+                                Institute of Automation, Chinese Academy of Sciences (CASIA)
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>Undergraduate Research Assistant</b>, May - Oct. 2017
+                                <br />
+                                Next Generation Internet Research Center
+                                <br />
+                                Beijing University of Posts and Telecommunications (BUPT)
                             </div>
                         </div>
                     </div>
