--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -133,7 +133,7 @@
                         <h1>Education</h1>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                <img src="../imgs/uoe_logo.png" class="img-fluid" />
+                                <img src="../imgs/uoe_logo.png" width="60%" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <b>MSc (with Distinction) in Informatics</b>, 2019
@@ -151,7 +151,7 @@
                         </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
+                                <img src="../imgs/bupt_logo.png" width="60%" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <b>B.Eng. in Telecommunication Engineering</b>, 2018
@@ -168,7 +168,7 @@
                         </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                <img src="../imgs/his_logo.png" class="img-fluid" />
+                                <img src="../imgs/his_logo.png" width="60%" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <b>Exchange student</b>, Sept. 2016 - Jan. 2017
@@ -184,7 +184,7 @@
                         <h1>Research Experience</h1>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                <img src="../imgs/casia_logo.png" class="img-fluid" />
+                                <img src="../imgs/casia_logo.png" width="60%" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <b>Research Intern</b>, Oct. 2019 - present
@@ -196,7 +196,7 @@
                         </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
+                                <img src="../imgs/bupt_logo.png" width="60%" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <b>Undergraduate Research Assistant</b>, May - Oct. 2017
