--- a/index.html
+++ b/index.html
@@ -302,9 +302,7 @@
                     <div id="experience" class="vspace-top">
                         <h1>Education</h1>
                         <div class="row vspace-top-news">
-                            <div class="col-sm-2 news-date">
-                                <img src="../imgs/uoe_logo.png" class="img-fluid" />
-                            </div>
+                            <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/uoe_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
                                 <b>MSc (with Distinction) in Informatics</b>, 2019
                                 <br />
@@ -320,9 +318,7 @@
                             </div>
                         </div>
                         <div class="row vspace-top-news">
-                            <div class="col-sm-2 news-date">
-                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
-                            </div>
+                            <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/bupt_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
                                 <b>B.Eng. in Telecommunication Engineering</b>, 2018
                                 <br />
@@ -337,9 +333,7 @@
                             </div>
                         </div>
                         <div class="row vspace-top-news">
-                            <div class="col-sm-2 news-date">
-                                <img src="../imgs/his_logo.png" class="img-fluid" />
-                            </div>
+                            <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/his_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
                                 <b>Exchange student</b>, Sept. 2016 - Jan. 2017
                                 <br />
@@ -354,9 +348,7 @@
                     <div class="vspace-top">
                         <h1>Research Experience</h1>
                         <div class="row vspace-top-news">
-                            <div class="col-sm-2 news-date">
-                                <img src="../imgs/casia_logo.png" class="img-fluid" />
-                            </div>
+                            <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/casia_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
                                 <b>Research Intern</b>, Oct. 2019 - present
                                 <br />
@@ -366,9 +358,7 @@
                             </div>
                         </div>
                         <div class="row vspace-top-news">
-                            <div class="col-sm-2 news-date">
-                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
-                            </div>
+                            <div class="col-sm-2 news-date">&emsp;&emsp;&emsp; <img src="../imgs/bupt_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
                                 <b>Undergraduate Research Assistant</b>, May - Oct. 2017
                                 <br />
