--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
                         <img src="imgs/portrait.jpeg" class="img-fluid" id="portrait" />
                     </div>
                     <div class="col">
-                        <div id="header-text-name">
-                            Hao Wang (王灏)
-                        </div>
+                        <div id="header-text-name">Hao Wang (王灏)</div>
                         <div id="header-text-status">
                             Research Intern <br />
                             <a href="http://www.cbsr.ia.ac.cn/">Center for Biometrics and Security Research</a>
@@ -142,18 +140,16 @@
                             <a href="http://www.cas.cn/">Chinese Academy of Sciences</a>
                             <br />
                         </div>
-                        <div id="header-text-email">
-                            haowang7308 (at) gmail (dot) com
-                        </div>
+                        <div id="header-text-email">haowang7308 (at) gmail (dot) com</div>
                         <div>
                             <br />
-                            <!-- &emsp;<a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a> -->
-                            &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a
+                            &emsp;<a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=th-g4jAAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
+                            &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
                                 href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"
-                                ><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071;"></i
+                                ><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i
                             ></a>
                             <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
-                            &emsp;<a href="./docs/CV/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4f6071;"></i></a>
+                            &emsp;<a href="./docs/CV/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4f6071"></i></a>
                         </div>
                     </div>
                 </div>
@@ -240,19 +236,22 @@
                         <h1>Publication</h1>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
-                                <img src="imgs/preprint.jpg" class="img-fluid" />
+                                <img src="imgs/fgnet.png" class="img-fluid" />
                             </div>
                             <div class="col">
-                                <div class="paper-title">
-                                    Beyond 3DMM Space: Towards Fine-grained 3D Face Reconstruction
-                                </div>
+                                <div class="paper-title">Beyond 3DMM Space: Towards Fine-grained 3D Face Reconstruction</div>
                                 <div class="paper-desc">ECCV 2020</div>
-                                <div class="paper-authors">Xiangyu Zhu, Fan Yang, Di Huang, Chang Yu, <u>Hao Wang</u>, Jianzhu Guo, Zhen Lei, Stan Z. Li</div>
-                                <!-- <div>
-                                    <a href="http://vsitzmann.github.io/srns/">[Project page]</a>
-                                    <a href="http://arxiv.org/abs/1906.01618">[Preprint]</a>
-                                    <a href="https://github.com/vsitzmann/scene-representation-networks">[Code]</a>
-                                </div> -->
+                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u>Hao Wang</u></b>, <a href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
+                                <div>
+                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">[Paper]</a>
+                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">[Supplement]</a>
+                                    <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">[Code]</a>
+                                </div>
+                                <ol type="i">
+                                    <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
+                                    <li>Constructed a new dataset, Fine-Grained 3D face (FG3D), with 200k samples for training;</li>
+                                    <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modication by warping the network input and output to the UV space</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
@@ -265,12 +264,8 @@
                                 <img src="docs/dissertation/msc/MSc.png" class="img-fluid" />
                             </div>
                             <div class="col">
-                                <div class="paper-title">
-                                    Gender Identification from 3D Facial Surface Model
-                                </div>
-                                <div class="paper-desc">
-                                    Dissertation for Master’s degree
-                                </div>
+                                <div class="paper-title">Gender Identification from 3D Facial Surface Model</div>
+                                <div class="paper-desc">Dissertation for Master’s degree</div>
                                 <div>
                                     <a href="docs/dissertation/msc/abstract.html">[Abstract]</a>
                                     <a href="docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
@@ -284,12 +279,8 @@
                                 <img src="docs/dissertation/beng/BEng.png" class="img-fluid" />
                             </div>
                             <div class="col">
-                                <div class="paper-title">
-                                    Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel
-                                </div>
-                                <div class="paper-desc">
-                                    Dissertation for Bachelor’s degree
-                                </div>
+                                <div class="paper-title">Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel</div>
+                                <div class="paper-desc">Dissertation for Bachelor’s degree</div>
                                 <div>
                                     <a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
                                     <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
@@ -375,14 +366,14 @@
                             Feel free to get in touch! I'll get back to you ASAP :D
                             <br />
                             <br />
-                            &emsp;<a href="mailto:haowang7308@gmail.com"><i class="far fa-envelope" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a
+                            &emsp;<a href="mailto:haowang7308@gmail.com"><i class="far fa-envelope" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
                                 href="https://github.com/HWANG7308"
-                                ><i class="fab fa-github" style="font-size: 24px; color: #4f6071;"></i
+                                ><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i
                             ></a>
-                            &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"
-                                ><i class="fab fa-facebook-f" style="font-size: 24px; color: #4f6071;"></i
+                            &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"
+                                ><i class="fab fa-facebook-f" style="font-size: 24px; color: #4f6071"></i
                             ></a>
-                            &emsp;<a href="https://www.instagram.com/_1wanghao1_/"><i class="fab fa-instagram" style="font-size: 24px; color: #4f6071;"></i></a>
+                            &emsp;<a href="https://www.instagram.com/_1wanghao1_/"><i class="fab fa-instagram" style="font-size: 24px; color: #4f6071"></i></a>
                             <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
                         </div>
                     </div>
@@ -390,7 +381,7 @@
             </div>
             <!-- Back to top -->
             <div class="vspace-top">
-                <a href="index.html" style="display: block; text-align: center;">[Back to Top]</a>
+                <a href="index.html" style="display: block; text-align: center">[Back to Top]</a>
             </div>
         </div>
 
