--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div id="header-text-email">haowang7308 (at) gmail (dot) com</div>
                         <div>
                             <br />
-                            &emsp;<a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=th-g4jAAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
+                            &emsp;<a href="https://scholar.google.com.sg/citations?user=th-g4jAAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
                             &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
                                 href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"
                                 ><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i
@@ -241,7 +241,7 @@
                             <div class="col">
                                 <div class="paper-title">Beyond 3DMM Space: Towards Fine-grained 3D Face Reconstruction</div>
                                 <div class="paper-desc">ECCV 2020</div>
-                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u>Hao Wang</u></b>, <a href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
+                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u><a href="https://scholar.google.com.sg/citations?user=th-g4jAAAAAJ">Hao Wang</a></u></b>, <a href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
                                 <div>
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">[Paper]</a>
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">[Supplement]</a>
