--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h1>Bio</h1>
                     <div>
                         <p>
-                            Hi! I am Hao Wang, currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences. My research interests are in 3D Vision and Graphics.
+                            Hi! I am Hao Wang, currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation, Chinese Academy of Sciences. My research interests are in 3D Vision and Graphics.
                             <br />
                             <br />
                             I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. In 2019, I received my MSc with Distinction in
