--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div id="header-text-email">haowang7308 (at) gmail (dot) com</div>
                         <div>
                             <br />
-                            &emsp;<a href="https://scholar.google.com.sg/citations?user=th-g4jAAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
+                            &emsp;<a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
                             &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
                                 href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"
                                 ><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i
