--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             <div class="col">
                                 <div class="paper-title">Beyond 3DMM Space: Towards Fine-grained 3D Face Reconstruction</div>
                                 <div class="paper-desc">ECCV 2020</div>
-                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u><a href="https://scholar.google.com.sg/citations?user=th-g4jAAAAAJ">Hao Wang</a></u></b>, <a href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
+                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang</a></u></b>, <a href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
                                 <div>
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">[Paper]</a>
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">[Supplement]</a>
