fix typo in index

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 <ol type="i">
                                     <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
                                     <li>Constructed a new dataset, Fine-Grained 3D face (FG3D), with 200k samples for training;</li>
-                                    <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modication by warping the network input and output to the UV space</li>
+                                    <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modification by warping the network input and output to the UV space</li>
                                 </ol>
                             </div>
                         </div>
