update paper link

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <div class="paper-desc">Dissertation for Master’s degree</div>
                                 <div>
                                     <a href="docs/dissertation/msc/abstract.html">[Abstract]</a>
-                                    <a href="docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
+                                    <a href="docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[Paper]</a>
                                     <!-- <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a> -->
                                     <a href="docs/dissertation/msc/cite.html">[Citation]</a>
                                 </div>
@@ -304,7 +304,7 @@
                                 <div class="paper-desc">Dissertation for Bachelor’s degree</div>
                                 <div>
                                     <a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
-                                    <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
+                                    <!-- <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a> -->
                                 </div>
                             </div>
                         </div>
@@ -320,7 +320,7 @@
                                 <br />
                                 The University of Edinburgh
                                 <br />
-                                Dissertation: Gender Identification from 3D Facial Surface Model <a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
+                                Dissertation: Gender Identification from 3D Facial Surface Model <a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[Paper]</a>
                                 <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
                                 <br />
                                 Supervisor:
@@ -336,7 +336,7 @@
                                 <br />
                                 Beijing University of Posts and Telecommunications
                                 <br />
-                                Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel <a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
+                                Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel <!-- <a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[Paper]</a> -->
                                 <br />
                                 Supervisor:
                                 <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
