--- a/index.html
+++ b/index.html
@@ -143,13 +143,19 @@
                         <div id="header-text-email">haowang7308 (at) gmail (dot) com</div>
                         <div>
                             <br />
-                            &emsp;<a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
-                            &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
-                                href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"
-                                ><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i
-                            ></a>
+                            <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
+                            <!-- <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> | -->
+                            <!-- <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a> | -->
+                            <a href="https://orcid.org/0000-0003-3847-524X">ORCiD</a> |
+                            <a href="https://github.com/HWANG7308">Github</a> |
+                            <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">Linkedin</a> |
+                            <a href="./docs/CV/CV_Hao_Wang.pdf">CV</a>
+                            <!-- &emsp;<a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a> -->
+                            <!-- &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> -->
+                            <!-- &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i></a> -->
+                            <!-- &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i></a> -->
                             <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
-                            &emsp;<a href="./docs/CV/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4f6071"></i></a>
+                            <!-- &emsp;<a href="./docs/CV/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4f6071"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -234,6 +240,9 @@
                     <!-- List of publications -->
                     <div id="publication" class="vspace-top">
                         <h1>Publication</h1>
+                        <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
+                        <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> |
+                        <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
                                 <img src="imgs/fgnet.png" class="img-fluid" />
@@ -243,9 +252,9 @@
                                 <div class="paper-desc">ECCV 2020</div>
                                 <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang</a></u></b>, <a href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
                                 <div>
-                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">[Paper]</a>
-                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">[Supplement]</a>
-                                    <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">[Code]</a>
+                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">Paper</a> |
+                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">Supp</a> |
+                                    <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">Code</a>
                                 </div>
                                 <ol type="i">
                                     <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
@@ -288,10 +297,10 @@
                                 <div class="paper-title">Gender Identification from 3D Facial Surface Model</div>
                                 <div class="paper-desc">Dissertation for Master’s degree</div>
                                 <div>
-                                    <a href="docs/dissertation/msc/abstract.html">[Abstract]</a>
-                                    <a href="docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[Paper]</a>
+                                    <a href="docs/dissertation/msc/abstract.html">Abstract</a> |
+                                    <a href="docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">Paper</a> |
                                     <!-- <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a> -->
-                                    <a href="docs/dissertation/msc/cite.html">[Citation]</a>
+                                    <a href="docs/dissertation/msc/cite.html">Citation</a>
                                 </div>
                             </div>
                         </div>
@@ -303,8 +312,8 @@
                                 <div class="paper-title">Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel</div>
                                 <div class="paper-desc">Dissertation for Bachelor’s degree</div>
                                 <div>
-                                    <a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
-                                    <!-- <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a> -->
+                                    <a href="docs/dissertation/beng/abstract.html">Abstract</a>
+                                    <!-- <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">Paper</a> -->
                                 </div>
                             </div>
                         </div>
@@ -320,8 +329,9 @@
                                 <br />
                                 The University of Edinburgh
                                 <br />
-                                Dissertation: Gender Identification from 3D Facial Surface Model <a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[Paper]</a>
-                                <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
+                                Dissertation: Gender Identification from 3D Facial Surface Model
+                                <!-- <a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">Paper</a> | -->
+                                <!-- <a href="../docs/dissertation/msc/cite.html">Citation</a> -->
                                 <br />
                                 Supervisor:
                                 <a href="https://homepages.inf.ed.ac.uk/rbf/">Robert B. Fisher</a>
