update personal info

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                             <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
                             <!-- <a href="https://dblp.uni-trier.de/pid/181/2812-74.html">DBLP</a> | -->
                             <!-- <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a> | -->
-                            <a href="https://orcid.org/0000-0003-3847-524X">ORCiD</a> |
+                            <a href="https://orcid.org/0000-0003-3847-524X">ORCID</a> |
                             <a href="https://github.com/HWANG7308">Github</a> |
-                            <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">Linkedin</a> |
+                            <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">LinkedIn</a> |
                             <a href="./docs/CV/CV_Hao_Wang.pdf">CV</a>
                             <!-- &emsp;<a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a> -->
                             <!-- &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> -->
