--- a/index.html
+++ b/index.html
@@ -270,14 +270,11 @@
                             <div class="col">
                                 <div class="paper-title">Face Forgery Detection by 3D Decomposition</div>
                                 <div class="paper-desc">arXiv</div>
-                                <!-- <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu</a>, Fan Yang, Di Huang, Chang Yu, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang</a></u></b>, <a
-                                        href=https://scholar.google.com/citations?user=W8_JzNcAAAAJ">Jianzhu Guo</a>, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a></div>
+                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu*</a>, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang*</a></u></b>, Hongyan Fei, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a> (*Equal contribution)</div>
                                 <div>
-                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341.pdf">[Paper]</a>
-                                    <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">[Supplement]</a>
-                                    <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">[Code]</a>
+                                    <a href="https://arxiv.org/abs/2011.09737">Paper</a>
                                 </div>
-                                <ol type="i">
+                                <!-- <ol type="i">
                                     <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
                                     <li>Constructed a new dataset, Fine-Grained 3D face (FG3D), with 200k samples for training;</li>
                                     <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modification by warping the network input and output to the UV space</li>
