change img for beyond 3dmm

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
-                                <img src="imgs/fgnet.png" class="img-fluid" />
+                                <img src="imgs/beyond3dmm.png" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <div class="paper-title">Beyond 3DMM Space: Towards Fine-grained 3D Face Reconstruction</div>
