update cvpr2021 paper

--- a/index.html
+++ b/index.html
@@ -245,6 +245,26 @@
                         <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
+                                <img src="imgs/face3ddecomp.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <div class="paper-title">Face Forgery Detection by 3D Decomposition</div>
+                                <div class="paper-desc">CVPR 2021 (Accepted)</div>
+                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu*</a>, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang*</a></u></b>, Hongyan Fei, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen
+                                        Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a> (*Equal contribution)</div>
+                                <div>
+                                    <a href="https://arxiv.org/abs/2011.09737">Paper</a>
+                                </div>
+                                <ol type="i">
+                                    <li>Introduced 3D decomposition into forgery detection;</li>
+                                    <li>Constructed facial detail to amplify subtle artifacts;</li>
+                                    <li>Proposed a two-stream FD<sup>2</sup>Net to fuse the clues from original images and facial details;</li>
+                                    <li>Introduced a supervised attention module to highlight the discriminative region</li>
+                                </ol>
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-3">
                                 <img src="imgs/beyond3dmm.png" class="img-fluid" />
                             </div>
                             <div class="col">
@@ -261,24 +281,6 @@
                                     <li>Constructed a new dataset, Fine-Grained 3D face (FG3D), with 200k samples for training;</li>
                                     <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modification by warping the network input and output to the UV space</li>
                                 </ol>
-                            </div>
-                        </div>
-                        <div class="row vspace-top-news">
-                            <div class="col-sm-3">
-                                <img src="imgs/preprint.jpg" class="img-fluid" />
-                            </div>
-                            <div class="col">
-                                <div class="paper-title">Face Forgery Detection by 3D Decomposition</div>
-                                <div class="paper-desc">arXiv</div>
-                                <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu*</a>, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang*</a></u></b>, Hongyan Fei, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a> (*Equal contribution)</div>
-                                <div>
-                                    <a href="https://arxiv.org/abs/2011.09737">Paper</a>
-                                </div>
-                                <!-- <ol type="i">
-                                    <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
-                                    <li>Constructed a new dataset, Fine-Grained 3D face (FG3D), with 200k samples for training;</li>
-                                    <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modification by warping the network input and output to the UV space</li>
-                                </ol> -->
                             </div>
                         </div>
                     </div>
