update chalmers phd education

--- a/index.html
+++ b/index.html
@@ -131,13 +131,11 @@
                     <div class="col">
                         <div id="header-text-name">Hao Wang (王灏)</div>
                         <div id="header-text-status">
-                            Research Intern <br />
-                            <a href="http://www.cbsr.ia.ac.cn/">Center for Biometrics and Security Research</a>
-                            &
-                            <a href="http://www.nlpr.ia.ac.cn/cn/index.html">National Laboratory of Pattern Recognition</a>
+                            Ph.D. student <br />
+                            <a href="https://www.chalmers.se/en/departments/ims/research/production-systems/Pages/default.aspx">Division of Production Systems</a>,
+                            <a href="https://www.chalmers.se/en/departments/ims/Pages/default.aspx">Department of Industrial and Materials Science</a>
                             <br />
-                            <a href="http://www.ia.cas.cn/">Institute of Automation</a> <br />
-                            <a href="http://www.cas.cn/">Chinese Academy of Sciences</a>
+                            <a href="https://www.chalmers.se/en/Pages/default.aspx">Chalmers University of Technology</a>
                             <br />
                         </div>
                         <div id="header-text-email">haowang7308 (at) gmail (dot) com</div>
@@ -168,7 +166,7 @@
                     <h1>Bio</h1>
                     <div>
                         <p>
-                            Hi! I am Hao Wang, currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation, Chinese Academy of Sciences. My research interests are in 3D Vision and Graphics.
+                            Hi! I am Hao Wang, currently a Ph.D. student at the Division of Production Systems, Department of Industrial and Materials Science, Chalmers University of Technology. My research interests are in 3D Vision and Graphics, and their application in real circumstances.
                             <br />
                             <br />
                             I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. In 2019, I received my MSc with Distinction in
@@ -321,6 +319,18 @@
                     <!-- List of education -->
                     <div id="experience" class="vspace-top">
                         <h1>Education</h1>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/chalmers_logo.png" width="50%" class="img-fluid" /></div>
+                            <div class="col">
+                                <b>Ph.D. student</b>, 2021 - Current
+                                <br />
+                                Chalmers University of Technology
+                                <br />
+                                Supervisor:
+                                <a href="https://www.chalmers.se/en/Staff/Pages/asa-fasth.aspx">Åsa Fasth Berglund</a>,
+                                <a href="https://www.chalmers.se/en/Staff/Pages/johan-stahre.aspx">Johan Stahre</a>
+                            </div>
+                        </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/uoe_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
