update CASIA date

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/casia_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
-                                <b>Research Intern</b>, Oct. 2019 - present
+                                <b>Research Intern</b>, Oct. 2019 - June 2021
                                 <br />
                                 Center for Biometrics and Security Research (CBSR) & National Laboratory of Pattern Recognition (NLPR)
                                 <br />
@@ -391,7 +391,7 @@
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">&emsp;&emsp;&emsp; <img src="../imgs/bupt_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
-                                <b>Undergraduate Research Assistant</b>, May - Oct. 2017
+                                <b>Undergraduate Research Assistant</b>, May 2017 - Oct. 2017
                                 <br />
                                 Next Generation Internet Research Center
                                 <br />
