update date in education

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/uoe_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
-                                <b>MSc (with Distinction) in Informatics</b>, 2019
+                                <b>MSc (with Distinction) in Informatics</b>, 2018 - 2019
                                 <br />
                                 The University of Edinburgh
                                 <br />
@@ -351,7 +351,7 @@
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">&emsp;&emsp;&emsp;<img src="../imgs/bupt_logo.png" width="50%" class="img-fluid" /></div>
                             <div class="col">
-                                <b>B.Eng. in Telecommunication Engineering</b>, 2018
+                                <b>B.Eng. in Telecommunication Engineering</b>, 2014 - 2018
                                 <br />
                                 Beijing University of Posts and Telecommunications
                                 <br />
