update cvpr 2021 oral

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             </div>
                             <div class="col">
                                 <div class="paper-title">Face Forgery Detection by 3D Decomposition</div>
-                                <div class="paper-desc">CVPR 2021 (Accept - Oral)</div>
+                                <div class="paper-desc">CVPR 2021 (Oral)</div>
                                 <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu*</a>, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang*</a></u></b>, Hongyan Fei, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen
                                         Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a> (*Equal contribution)</div>
                                 <div>
