--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <a href="https://www.chalmers.se/en/Pages/default.aspx">Chalmers University of Technology</a>
                             <br />
                         </div>
-                        <div id="header-text-email">haowang7308 (at) gmail (dot) com</div>
+                        <div id="header-text-email">haowang (at) chalmers (dot) se</div>
                         <div>
                             <br />
                             <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
@@ -251,7 +251,7 @@
                                 <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu*</a>, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang*</a></u></b>, Hongyan Fei, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen
                                         Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a> (*Equal contribution)</div>
                                 <div>
-                                    <a href="https://arxiv.org/abs/2011.09737">Paper</a>
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a>
                                 </div>
                                 <ol type="i">
                                     <li>Introduced 3D decomposition into forgery detection;</li>
@@ -406,7 +406,7 @@
                             Feel free to get in touch! I'll get back to you ASAP :D
                             <br />
                             <br />
-                            &emsp;<a href="mailto:haowang7308@gmail.com"><i class="far fa-envelope" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
+                            &emsp;<a href="mailto:haowang@chalmers.se"><i class="far fa-envelope" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a
                                 href="https://github.com/HWANG7308"
                                 ><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i
                             ></a>
