--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                     <h1>Bio</h1>
                     <div>
                         <p>
-                            Hi! I am Hao Wang, currently a Ph.D. student at the Division of Production Systems, Department of Industrial and Materials Science, Chalmers University of Technology. My research interests are in 3D Vision and Graphics, and their application in real circumstances.
+                            Hi! I am Hao Wang, currently a Ph.D. student at the Division of Production Systems, Department of Industrial and Materials Science, Chalmers University of Technology. My research interests are in 3D Vision and Graphics, and their application in production system and manufacturing.
                             <br />
                             <br />
                             I have background in signal and image processing, embedded system, machine learning, computer vision, and natural language processing. In 2019, I received my MSc with Distinction in
-                            <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by <a href="https://homepages.inf.ed.ac.uk/rbf/">Prof. Bob Fisher</a>. In 2018, I received my
+                            <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>. In 2018, I received my
                             B.Eng. in Telecommunication Engineering from <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a>.
                             <!-- <br />
                             <br />
@@ -327,8 +327,8 @@
                                 Chalmers University of Technology
                                 <br />
                                 Supervisor:
-                                <a href="https://www.chalmers.se/en/Staff/Pages/asa-fasth.aspx">Åsa Fasth Berglund</a>,
-                                <a href="https://www.chalmers.se/en/Staff/Pages/johan-stahre.aspx">Johan Stahre</a>
+                                <a href="https://www.chalmers.se/en/staff/Pages/bjorn-johansson.aspx">Björn Johansson</a>,
+                                <a href="https://www.chalmers.se/en/staff/Pages/anders-skoogh.aspx">Anders Skoogh</a>
                             </div>
                         </div>
                         <div class="row vspace-top-news">
