--- a/index.html
+++ b/index.html
@@ -243,6 +243,19 @@
                         <a href="https://www.semanticscholar.org/author/Hao-Wang/1806035689">Semantic Scholar</a>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
+                                <img src="imgs/beyond3dmm_pami.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <div class="paper-title">Beyond 3DMM: Learning to Capture High-fidelity 3D Face Shape</div>
+                                <div class="paper-desc">PAMI 2022</div>
+                                <div class="paper-authors">Xiangyu Zhu, Chang Yu, Di Huang, Zhen Lei, <b><u>Hao Wang</u></b>, Stan Z. Li</div>
+                                <div>
+                                    <a href="https://ieeexplore.ieee.org/document/9748011">Paper</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-3">
                                 <img src="imgs/face3ddecomp.png" class="img-fluid" />
                             </div>
                             <div class="col">
@@ -251,14 +264,15 @@
                                 <div class="paper-authors"><a href="https://scholar.google.com/citations?user=1rbNk5oAAAAJ">Xiangyu Zhu*</a>, <b><u><a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Hao Wang*</a></u></b>, Hongyan Fei, <a href="https://scholar.google.com/citations?user=cuJ3QG8AAAAJ">Zhen
                                         Lei</a>, <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ">Stan Z. Li</a> (*Equal contribution)</div>
                                 <div>
-                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a>
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a> |
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2021/supplemental/Zhu_Face_Forgery_Detection_CVPR_2021_supplemental.pdf">Supp</a>
                                 </div>
-                                <ol type="i">
+                                <!-- <ol type="i">
                                     <li>Introduced 3D decomposition into forgery detection;</li>
                                     <li>Constructed facial detail to amplify subtle artifacts;</li>
                                     <li>Proposed a two-stream FD<sup>2</sup>Net to fuse the clues from original images and facial details;</li>
                                     <li>Introduced a supervised attention module to highlight the discriminative region</li>
-                                </ol>
+                                </ol> -->
                             </div>
                         </div>
                         <div class="row vspace-top-news">
@@ -274,11 +288,11 @@
                                     <a href="http://www.ecva.net/papers/eccv_2020/papers_ECCV/papers/123530341-supp.pdf">Supp</a> |
                                     <a href="https://github.com/XiangyuZhu-open/Beyond3DMM">Code</a>
                                 </div>
-                                <ol type="i">
+                                <!-- <ol type="i">
                                     <li>Proposed a novel solution to construct large-scale fine-grained 3D data from RGB-D images;</li>
                                     <li>Constructed a new dataset, Fine-Grained 3D face (FG3D), with 200k samples for training;</li>
                                     <li>Proposed a Fine-Grained reconstruction Network (FGNet) concentrating on shape modification by warping the network input and output to the UV space</li>
-                                </ol>
+                                </ol>-->
                             </div>
                         </div>
                     </div>
