Update EWASS and DIGITALIS

--- a/index.html
+++ b/index.html
@@ -299,7 +299,29 @@
 
                     <!-- List of research projects -->
                     <div id="project" class="vspace-top">
-                        <h1>Projects Highlight</h1>
+                        <h1>Research Projects</h1>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-3">
+                                <img src="imgs/ewass.jpg" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <div class="paper-title">Empowering Human Workers for Assembly of Wire Harnesses (EWASS)</div>
+                                <div>
+                                    <a href="https://produktion2030.se/en/projekt/empowering-human-workers-assembly-wire-harnesses-ewass/">Webpage</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-3">
+                                <img src="imgs/digitalis.webp" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <div class="paper-title">DIGITAL work InStructions for cognitive work (DIGITALIS)</div>
+                                <div>
+                                    <a href="https://produktion2030.se/en/projekt/digital-work-instructions-cognitive-work-digitalis/">Webpage</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
                                 <img src="docs/dissertation/msc/MSc.png" class="img-fluid" />
