--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
                             </div>
                             <div class="col">
                                 <div class="paper-title">Empowering Human Workers for Assembly of Wire Harnesses (EWASS)</div>
+                                <div class="paper-desc">2022-</div>
                                 <div>
                                     <a href="https://produktion2030.se/en/projekt/empowering-human-workers-assembly-wire-harnesses-ewass/">Webpage</a>
                                 </div>
@@ -317,6 +318,7 @@
                             </div>
                             <div class="col">
                                 <div class="paper-title">DIGITAL work InStructions for cognitive work (DIGITALIS)</div>
+                                <div class="paper-desc">2022-</div>
                                 <div>
                                     <a href="https://produktion2030.se/en/projekt/digital-work-instructions-cognitive-work-digitalis/">Webpage</a>
                                 </div>
@@ -446,10 +448,9 @@
                                 href="https://github.com/HWANG7308"
                                 ><i class="fab fa-github" style="font-size: 24px; color: #4f6071"></i
                             ></a>
-                            &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i></a> &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"
-                                ><i class="fab fa-facebook-f" style="font-size: 24px; color: #4f6071"></i
-                            ></a>
-                            &emsp;<a href="https://www.instagram.com/_1wanghao1_/"><i class="fab fa-instagram" style="font-size: 24px; color: #4f6071"></i></a>
+                            &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071"></i></a>
+                            <!-- &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"><i class="fab fa-facebook-f" style="font-size: 24px; color: #4f6071"></i></a> -->
+                            &emsp;<a href="https://www.instagram.com/1wang1hao1/"><i class="fab fa-instagram" style="font-size: 24px; color: #4f6071"></i></a>
                             <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
                         </div>
                     </div>
