Update the link to APMS2023 battery paper

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <div class="paper-desc">APMS 2023</div>
                                 <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
-<!--                                     <a href="">Paper</a> -->
+                                    <a href="https://link.springer.com/chapter/10.1007/978-3-031-43688-8_36">Paper</a>
                                 </div>
                             </div>
                         </div>
