update case2023 picture

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
-                                <img src="imgs/case2023connector.pdf" class="img-fluid" />
+                                <img src="imgs/case2023connector.png" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <div class="paper-title">Deep Learning-Based Connector Detection for Robotized Assembly of Automotive Wire Harnesses</div>
